fix: sync machines breaking with null names move: components folder